# zero2prod

./: .deepsource.toml  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  sqlx-data.json
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
configuration/: base.yaml
docker/: docker-compose.yml
migrations/: 20220326180725_create_subscriptions_table.sql  20220511210831_add_status_to_subscriptions.sql  20220511211025_make_status_not_null_in_subscriptions.sql  20220511211144_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
