[package]
name = "zero2prod"
version = "0.2.0"
edition = "2021"
authors = ["Oleh Vanin <exsesx@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = "1.17"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
config = "0.12"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
