[package]
name = "zero2prod"
version = "0.11.0"
edition = "2021"
authors = ["Oleh Vanin <exsesx@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde-aux = "4.1.2"
config = "0.13.3"
chrono = "0.4"
uuid = { version = "1.3.0", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.2"
unicode-segmentation = "1"
validator = "0.16.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
fake = "~2.3"
claim = "0.5"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"